# cli

./: README.FOD.md
.github/workflows/: testing.yml
examples/templates/GitHub/: debricked-non-docker.yml
examples/templates/GitLab/: gitlab-ci.yml
internal/cmd/root/: root.go
internal/cmd/vulnerabilities/: vulnerabilities.go  vulnerabilities_test.go
internal/cmd/vulnerabilities/list/: list.go  list_test.go
internal/cmd/vulnerabilities/remediate/: remediate.go  remediate_test.go
internal/file/: finder.go
internal/resolution/pm/: pm.go  pm_test.go
internal/resolution/pm/cargo/: IMPLEMENTATION.md  README.md  cmd_factory.go  cmd_factory_test.go  job.go  job_test.go  pm.go  pm_test.go  strategy.go  strategy_test.go
internal/resolution/pm/cocoapods/: IMPLEMENTATION.md  README.md  cmd_factory.go  cmd_factory_test.go  job.go  job_test.go  pm.go  pm_test.go  strategy.go  strategy_test.go
internal/resolution/pm/rubygems/: IMPLEMENTATION.md  README.md  cmd_factory.go  cmd_factory_test.go  job.go  job_test.go  pm.go  pm_test.go  strategy.go  strategy_test.go
internal/resolution/strategy/: strategy_factory.go  strategy_factory_test.go
internal/vulnerabilities/: vulnerabilities.go
internal/vulnerabilities/list/: vulnerabilities copy.go  vulnerabilities.go  vulnerabilities_test.go
internal/vulnerabilities/remediate/: vulnerabilities.go  vulnerabilities_test.go
internal/wire/: cli_container.go
test/resolve/: resolver_test.go
test/resolve/testdata/cargo/: Cargo.toml
test/resolve/testdata/cocoapods/: Podfile
test/resolve/testdata/rubygems/: Gemfile
