[package]
name = "test-app"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"

[dev-dependencies]
mockito = "0.31"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
